--- a/notebooks/1_masks/rescale.ipynb
+++ b/notebooks/1_masks/rescale.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 18.12it/s]\n"
+      "100%|██████████| 7/7 [00:00<00:00, 18.31it/s]\n"
      ]
     }
    ],
@@ -41,7 +41,31 @@
     "    img = imread(os.path.join(ipath, fname)).astype(\"u8\")\n",
     "    rescaled_img = rescale(img, 684/2048, anti_aliasing=False, preserve_range=True)\n",
     "    tf.imwrite(os.path.join(opath, f\"{fname.split('.')[0]}.dilated_labels.from_60x.tiff\"),\n",
-    "               rescaled_img, software=\"GG20210811\")"
+    "               rescaled_img.astype(\"u8\"), software=\"GG20210811\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:00<00:00, 18.52it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ipath = \"../../data/60x_mask/labels/\"\n",
+    "opath = \"../../data/20x_mask/labels_from60x/\"\n",
+    "flist = os.listdir(ipath)\n",
+    "for fname in tqdm(flist):\n",
+    "    img = imread(os.path.join(ipath, fname)).astype(\"u8\")\n",
+    "    rescaled_img = rescale(img, 684/2048, anti_aliasing=False, preserve_range=True)\n",
+    "    tf.imwrite(os.path.join(opath, f\"{fname.split('.')[0]}.labels.from_60x.tiff\"),\n",
+    "               rescaled_img.astype(\"u8\"), software=\"GG20210811\")"
    ]
   }
  ],
