Fixed and set rescaling factor to 1 for raw datasets

--- a/notebooks/3_dots/1_assemble_dots.ipynb
+++ b/notebooks/3_dots/1_assemble_dots.ipynb
@@ -121,6 +121,7 @@
     "scaling_values = fread(\"../../data/dw_scaling_factors.tsv\", key=c(\"magnification\", \"image_type\", \"series_id\"))\n",
     "setkeyv(dots_data, c(\"magnification\", \"image_type\", \"series_id\"))\n",
     "dots_data2 = scaling_values[dots_data]\n",
+    "dots_data2[is.na(scaling), scaling := 1]\n",
     "dots_data2[, Value2 := Value/scaling]"
    ]
   },
