Fixed dots filter and export.

--- a/notebooks/3_dots/2_dots_feature_plot.ipynb
+++ b/notebooks/3_dots/2_dots_feature_plot.ipynb
@@ -775,7 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exporting dots after filtering for FWHM in [0.5; 5] and selecting only dots in (selected) nuclei"
+    "### Count dots after filtering for FWHM in [0.5; 5] and selecting only dots in (selected) nuclei"
    ]
   },
   {
@@ -893,15 +893,6 @@
    ],
    "source": [
     "dim(ddata2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saveRDS(ddata2, file.path(root_path, \"dots_data.clean.rds\"))"
    ]
   }
  ],
