--- a/notebooks/4_reference_dots/2_plot_reference_overlays.ipynb
+++ b/notebooks/4_reference_dots/2_plot_reference_overlays.ipynb
@@ -61,53 +61,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Field #1\n",
+      "Field #1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|          | 2/180 [00:00<00:11, 14.86it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 180/180 [00:11<00:00, 15.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
-      "Field #2\n",
+      "Field #2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|          | 2/208 [00:00<00:12, 16.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 208/208 [00:13<00:00, 15.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
-      "Field #3\n",
+      "Field #3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|▏         | 2/156 [00:00<00:10, 14.98it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 156/156 [00:09<00:00, 15.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
-      "Field #4\n",
+      "Field #4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|          | 2/172 [00:00<00:11, 15.37it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 172/172 [00:10<00:00, 15.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
-      "Field #5\n",
+      "Field #5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|          | 2/342 [00:00<00:21, 16.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 342/342 [00:20<00:00, 16.72it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
-      "Field #6\n",
+      "Field #6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|          | 2/210 [00:00<00:13, 15.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 210/210 [00:14<00:00, 14.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
-      "Field #7\n",
+      "Field #7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus:   1%|          | 2/221 [00:00<00:13, 15.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting raw\n",
       " > Plotting dw\n",
-      " > Plotting contours\n",
+      " > Plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nucleus: 100%|██████████| 221/221 [00:13<00:00, 16.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n"
      ]
@@ -120,8 +302,7 @@
     "    raw_max_z_proj = tifffile.imread(os.path.join(raw_image_folder_path, f\"a647_{current_field_id:03d}.tif\")).max(0)\n",
     "    dw__max_z_proj = tifffile.imread(os.path.join(dw__image_folder_path, f\"a647_{current_field_id:03d}.tif\")).max(0)\n",
     "    \n",
-    "    mask = tifffile.imread(os.path.join(mask_folder_path, f\"a647_{current_field_id:03d}.dilated_labels.tiff\")).reshape(raw_max_z_proj.shape)\n",
-    "    contours = measure.find_contours(mask, 0.8)\n",
+    "    labels = tifffile.imread(os.path.join(mask_folder_path, f\"a647_{current_field_id:03d}.dilated_labels.tiff\")).reshape(raw_max_z_proj.shape)\n",
     "\n",
     "    field_raw_dots = ref_raw.loc[ref_raw[\"sid\"] == current_field_id, :].sort_values(\"Value2\", ascending=False)\n",
     "    field_dw__dots = ref__dw.loc[ref__dw[\"sid\"] == current_field_id, :].sort_values(\"Value2\", ascending=False)\n",
@@ -156,9 +337,11 @@
     "        y=selected_dw__dots[\"x\"].values,\n",
     "        s=30, facecolors='none', edgecolors='r', linewidth=.5)\n",
     "    print(\" > Plotting contours\")\n",
-    "    for contour in contours:\n",
-    "        ax[0].scatter(x=contour[:,1], y=contour[:,0], c=\"yellow\", s=.005)\n",
-    "        ax[1].scatter(x=contour[:,1], y=contour[:,0], c=\"yellow\", s=.005)\n",
+    "    for lid in tqdm(range(1, labels.max()), desc=\"nucleus\"):\n",
+    "        contours = measure.find_contours(labels == lid, 0.8)\n",
+    "        for contour in contours:\n",
+    "            ax[0].scatter(x=contour[:,1], y=contour[:,0], c=\"yellow\", s=.005)\n",
+    "            ax[1].scatter(x=contour[:,1], y=contour[:,0], c=\"yellow\", s=.005)\n",
     "    print(\" > Plotting overlapped points between raw and dw\")\n",
     "    ax[2].set_title(\"Red: 60x_raw. Blue: 60x_dw.\")\n",
     "    ax[2].plot(\n",
