Moved reference output and exported reference dot tables.

--- a/notebooks/4_reference_dots/1_reference_selection.ipynb
+++ b/notebooks/4_reference_dots/1_reference_selection.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matched_dots.to_csv(\"../../data/60x_matched_dots.tsv\", sep=\"\\t\", index=False)"
+    "matched_dots.to_csv(\"../../data/60x_reference/matched_dots.tsv\", sep=\"\\t\", index=False)"
    ]
   }
  ],
