--- a/notebooks/4_reference_dots/2_plot_reference_overlays.ipynb
+++ b/notebooks/4_reference_dots/2_plot_reference_overlays.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matched_dots = pd.read_csv(\"../../data/60x_matched_dots.tsv\", sep=\"\\t\")"
+    "matched_dots = pd.read_csv(\"../../data/60x_reference/matched_dots.tsv\", sep=\"\\t\")"
    ]
   },
   {
@@ -354,7 +354,7 @@
     "        'b.', marker=\".\", markersize=.8)\n",
     "    plt.close(fig3)\n",
     "    #print(\" > Exporting\")\n",
-    "    fig3.savefig(f\"../../data/60x_reference_overlay/overlay_{current_field_id:03d}.png\", bbox_inches='tight')\n",
+    "    fig3.savefig(f\"../../data/60x_reference/overlays/overlay_{current_field_id:03d}.png\", bbox_inches='tight')\n",
     "    print(\" ! DONE\")"
    ]
   }
