Fixed overlays without shift.

--- a/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_dw.ipynb
+++ b/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_dw.ipynb
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:16<01:40, 16.82s/it]"
+      " 14%|█▍        | 1/7 [00:16<01:38, 16.41s/it]"
      ]
     },
     {
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:36<01:28, 17.80s/it]"
+      " 29%|██▊       | 2/7 [00:36<01:27, 17.48s/it]"
      ]
     },
     {
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:51<01:06, 16.74s/it]"
+      " 43%|████▎     | 3/7 [00:50<01:05, 16.49s/it]"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [01:06<00:49, 16.43s/it]"
+      " 57%|█████▋    | 4/7 [01:06<00:48, 16.19s/it]"
      ]
     },
     {
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [01:34<00:39, 19.75s/it]"
+      " 71%|███████▏  | 5/7 [01:33<00:38, 19.49s/it]"
      ]
     },
     {
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [01:53<00:19, 19.46s/it]"
+      " 86%|████████▌ | 6/7 [01:51<00:19, 19.24s/it]"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [02:12<00:00, 18.97s/it]"
+      "100%|██████████| 7/7 [02:12<00:00, 18.91s/it]"
      ]
     },
     {
@@ -266,11 +266,12 @@
     "    dots = dots_data.loc[current_field_id == dots_data[\"sid\"], :].copy(\n",
     "        ).sort_values(\"Value2\", ascending=False).reset_index(drop=True)\n",
     "    \n",
-    "    dot_coords = dots.loc[dw__thr <= dots[\"Value2\"], (\"x\", \"y\")].copy().reset_index(drop=True) / aspect\n",
-    "    dot_coords[\"x\"] += (shifts.loc[current_field_id, \"x\"] * 9)\n",
-    "    dot_coords[\"y\"] += (shifts.loc[current_field_id, \"y\"] * 9)\n",
+    "    dot_coords = dots.loc[dw__thr <= dots[\"Value2\"], (\"x\", \"y\")].copy().reset_index(drop=True)\n",
+    "    dot_coords2 = dot_coords.copy()/ aspect\n",
+    "    dot_coords2[\"x\"] += (shifts.loc[current_field_id, \"x\"] * 9)\n",
+    "    dot_coords2[\"y\"] += (shifts.loc[current_field_id, \"y\"] * 9)\n",
     "    ref_coords = reference.loc[reference[\"sid\"] == current_field_id, (\"x\", \"y\")].copy().reset_index(drop=True)\n",
-    "    pdist = cdist(dot_coords, ref_coords)\n",
+    "    pdist = cdist(dot_coords2, ref_coords)\n",
     "    \n",
     "    matched: List[Tuple[int, int, float]] = []\n",
     "    dot_id = 0\n",
@@ -300,8 +301,8 @@
     "        vmin=dot_max_z_proj.min(), vmax=dot_max_z_proj.max(),\n",
     "        resample=False, filternorm=False)\n",
     "    ax[0].scatter(\n",
-    "        x=dot_coords[\"y\"].values*aspect[1],\n",
-    "        y=dot_coords[\"x\"].values*aspect[0],\n",
+    "        x=dot_coords[\"y\"].values,\n",
+    "        y=dot_coords[\"x\"].values,\n",
     "        s=30, facecolors='none', edgecolors='r', linewidth=.5)\n",
     "    print(\" > Plotting ref\")\n",
     "    ax[1].set_title(\"60x_dw\")\n",
