--- a/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_raw.ipynb
+++ b/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_raw.ipynb
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:16<01:40, 16.76s/it]"
+      " 14%|█▍        | 1/7 [00:16<01:39, 16.61s/it]"
      ]
     },
     {
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:37<01:29, 17.84s/it]"
+      " 29%|██▊       | 2/7 [00:36<01:28, 17.64s/it]"
      ]
     },
     {
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:52<01:08, 17.09s/it]"
+      " 43%|████▎     | 3/7 [00:51<01:07, 16.91s/it]"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [01:09<00:51, 17.10s/it]"
+      " 57%|█████▋    | 4/7 [01:08<00:50, 16.87s/it]"
      ]
     },
     {
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [01:40<00:42, 21.10s/it]"
+      " 71%|███████▏  | 5/7 [01:38<00:41, 20.72s/it]"
      ]
     },
     {
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [02:00<00:20, 20.85s/it]"
+      " 86%|████████▌ | 6/7 [01:58<00:20, 20.50s/it]"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [02:19<00:00, 19.96s/it]"
+      "100%|██████████| 7/7 [02:19<00:00, 19.87s/it]"
      ]
     },
     {
@@ -266,11 +266,12 @@
     "    dots = dots_data.loc[current_field_id == dots_data[\"sid\"], :].copy(\n",
     "        ).sort_values(\"Value2\", ascending=False).reset_index(drop=True)\n",
     "    \n",
-    "    dot_coords = dots.loc[raw_thr <= dots[\"Value2\"], (\"x\", \"y\")].copy().reset_index(drop=True) / aspect\n",
-    "    dot_coords[\"x\"] += (shifts.loc[current_field_id, \"x\"] * 9)\n",
-    "    dot_coords[\"y\"] += (shifts.loc[current_field_id, \"y\"] * 9)\n",
+    "    dot_coords = dots.loc[raw_thr <= dots[\"Value2\"], (\"x\", \"y\")].copy().reset_index(drop=True)\n",
+    "    dot_coords2 = dot_coords.copy()/ aspect\n",
+    "    dot_coords2[\"x\"] += (shifts.loc[current_field_id, \"x\"] * 9)\n",
+    "    dot_coords2[\"y\"] += (shifts.loc[current_field_id, \"y\"] * 9)\n",
     "    ref_coords = reference.loc[reference[\"sid\"] == current_field_id, (\"x\", \"y\")].copy().reset_index(drop=True)\n",
-    "    pdist = cdist(dot_coords, ref_coords)\n",
+    "    pdist = cdist(dot_coords2, ref_coords)\n",
     "    \n",
     "    matched: List[Tuple[int, int, float]] = []\n",
     "    dot_id = 0\n",
