--- a/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_dw.ipynb
+++ b/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_dw.ipynb
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:16<01:38, 16.41s/it]"
+      " 14%|█▍        | 1/7 [00:16<01:41, 16.94s/it]"
      ]
     },
     {
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:36<01:27, 17.48s/it]"
+      " 29%|██▊       | 2/7 [00:36<01:29, 17.87s/it]"
      ]
     },
     {
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:50<01:05, 16.49s/it]"
+      " 43%|████▎     | 3/7 [00:51<01:07, 16.77s/it]"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [01:06<00:48, 16.19s/it]"
+      " 57%|█████▋    | 4/7 [01:06<00:49, 16.43s/it]"
      ]
     },
     {
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [01:33<00:38, 19.49s/it]"
+      " 71%|███████▏  | 5/7 [01:34<00:39, 19.78s/it]"
      ]
     },
     {
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [01:51<00:19, 19.24s/it]"
+      " 86%|████████▌ | 6/7 [01:53<00:19, 19.50s/it]"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [02:12<00:00, 18.91s/it]"
+      "100%|██████████| 7/7 [02:12<00:00, 18.97s/it]"
      ]
     },
     {
@@ -327,8 +327,8 @@
     "    print(\" > Plotting overlapped points between raw and dw\")\n",
     "    ax[2].set_title(f\"Red: {selected_magnification}_{selected_image_type}. Blue: 60x_dw.\")\n",
     "    ax[2].plot(\n",
-    "        dot_coords[\"y\"].values,\n",
-    "        dot_coords[\"x\"].values,\n",
+    "        dot_coords2[\"y\"].values,\n",
+    "        dot_coords2[\"x\"].values,\n",
     "        'r.', marker=\".\", markersize=2)\n",
     "    ax[2].plot(\n",
     "        ref_coords[\"y\"].values,\n",
