--- a/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_raw.ipynb
+++ b/notebooks/5_comparing_magnifications/1_matching_reference_to_20x_raw.ipynb
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:16<01:39, 16.61s/it]"
+      " 14%|█▍        | 1/7 [00:16<01:40, 16.75s/it]"
      ]
     },
     {
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:36<01:28, 17.64s/it]"
+      " 29%|██▊       | 2/7 [00:37<01:29, 17.81s/it]"
      ]
     },
     {
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:51<01:07, 16.91s/it]"
+      " 43%|████▎     | 3/7 [00:51<01:07, 16.84s/it]"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [01:08<00:50, 16.87s/it]"
+      " 57%|█████▋    | 4/7 [01:07<00:49, 16.66s/it]"
      ]
     },
     {
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [01:38<00:41, 20.72s/it]"
+      " 71%|███████▏  | 5/7 [01:36<00:40, 20.20s/it]"
      ]
     },
     {
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [01:58<00:20, 20.50s/it]"
+      " 86%|████████▌ | 6/7 [01:55<00:19, 19.91s/it]"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [02:19<00:00, 19.87s/it]"
+      "100%|██████████| 7/7 [02:15<00:00, 19.36s/it]"
      ]
     },
     {
@@ -301,8 +301,8 @@
     "        vmin=dot_max_z_proj.min(), vmax=dot_max_z_proj.max(),\n",
     "        resample=False, filternorm=False)\n",
     "    ax[0].scatter(\n",
-    "        x=dot_coords[\"y\"].values*aspect[1],\n",
-    "        y=dot_coords[\"x\"].values*aspect[0],\n",
+    "        x=dot_coords[\"y\"].values,\n",
+    "        y=dot_coords[\"x\"].values,\n",
     "        s=30, facecolors='none', edgecolors='r', linewidth=.5)\n",
     "    print(\" > Plotting ref\")\n",
     "    ax[1].set_title(\"60x_dw\")\n",
@@ -327,8 +327,8 @@
     "    print(\" > Plotting overlapped points between raw and dw\")\n",
     "    ax[2].set_title(f\"Red: {selected_magnification}_{selected_image_type}. Blue: 60x_dw.\")\n",
     "    ax[2].plot(\n",
-    "        dot_coords[\"y\"].values,\n",
-    "        dot_coords[\"x\"].values,\n",
+    "        dot_coords2[\"y\"].values,\n",
+    "        dot_coords2[\"x\"].values,\n",
     "        'r.', marker=\".\", markersize=2)\n",
     "    ax[2].plot(\n",
     "        ref_coords[\"y\"].values,\n",
