--- a/notebooks/4_reference_dots_from_60x/3.1_export_reference.field_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/3.1_export_reference.field_thr.ipynb
@@ -41,12 +41,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matched_dots = pd.read_csv(\"../../data/60x_reference/matched_dots.tsv\", sep=\"\\t\")"
+    "matched_dots = pd.read_csv(\"../../data/60x_reference/matched_dots.field_thr.tsv\", sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thr_data = pd.read_csv(\"../../data/60x_reference/intensity_thresholds.by_field.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,24 +90,18 @@
     "selected_dw__dots: List[pd.DataFrame] = []\n",
     "for current_field_id in field_list:\n",
     "    print(f\"Field #{current_field_id}\")\n",
+    "    thresholds = thr_data.loc[current_field_id == thr_data[\"sid\"], :]\n",
+    "    raw_thr = thresholds.loc[\"raw\" == thresholds[\"image_type\"], \"thr\"].values[0]\n",
+    "    dw__thr = thresholds.loc[\"dw\" == thresholds[\"image_type\"], \"thr\"].values[0]\n",
+    "    \n",
     "    field_raw_dots = ref_raw.loc[ref_raw[\"sid\"] == current_field_id, :].sort_values(\"Value2\", ascending=False)\n",
     "    field_dw__dots = ref__dw.loc[ref__dw[\"sid\"] == current_field_id, :].sort_values(\"Value2\", ascending=False)\n",
     "    \n",
     "    matched_raw_dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"raw_id\"].values\n",
     "    matched_dw__dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"dw__id\"].values\n",
-    "    max_match_dist = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"eudist\"].max()\n",
     "    \n",
     "    selected_raw_dots.append(field_raw_dots.loc[field_raw_dots[\"Value2\"] >= raw_thr, :].reset_index(drop=True).iloc[matched_raw_dots, :])\n",
     "    selected_dw__dots.append(field_dw__dots.loc[field_dw__dots[\"Value2\"] >= dw__thr, :].reset_index(drop=True).iloc[matched_dw__dots, :])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.concat(selected_raw_dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/ref_raw.tsv\", sep=\"\\t\", index=False)"
    ]
   },
   {
@@ -107,7 +110,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat(selected_dw__dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/ref__dw.tsv\", sep=\"\\t\", index=False)"
+    "pd.concat(selected_raw_dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/ref_raw.field_thr.tsv\", sep=\"\\t\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat(selected_dw__dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/ref__dw.field_thr.tsv\", sep=\"\\t\", index=False)"
    ]
   }
  ],
