Add statistis without fields 6 and/or 7

--- a/notebooks/4_reference_dots_from_60x/1.1_reference_selection.field_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/1.1_reference_selection.field_thr.ipynb
@@ -109,21 +109,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4"
+      "Iteration #...1...2...3...4...5...6...7...8...9"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:00<00:05,  1.07it/s]"
+      " 14%|█▍        | 1/7 [00:02<00:17,  2.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...5...6...7...8...9\n",
+      "\n",
       "Iteration #...1...2...3...4...5...6...7...8...9...10...11"
      ]
     },
@@ -131,43 +131,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:02<00:05,  1.08s/it]"
+      " 29%|██▊       | 2/7 [00:06<00:15,  3.05s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 3/7 [00:02<00:03,  1.05it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration #...1...2...3...4...5...6\n",
-      "Iteration #...1...2...3...4...5...6...7...8"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 57%|█████▋    | 4/7 [00:03<00:02,  1.05it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...9\n",
+      "\n",
       "Iteration #...1...2...3...4"
      ]
     },
@@ -175,43 +146,74 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:05<00:02,  1.08s/it]"
+      " 43%|████▎     | 3/7 [00:07<00:10,  2.62s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...5\n"
+      "...5...6\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:06<00:00,  1.02it/s]"
+      " 57%|█████▋    | 4/7 [00:10<00:07,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4\n",
-      "Iteration #...1...2...3...4...5...6...7"
+      "\n",
+      "Iteration #...1...2...3...4...5"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:07<00:00,  1.01s/it]"
+      " 71%|███████▏  | 5/7 [00:14<00:05,  2.95s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...8...9...10...11...12\n"
+      "\n",
+      "Iteration #...1"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|████████▌ | 6/7 [00:16<00:02,  2.74s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...2...3...4\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:19<00:00,  2.75s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -349,12 +351,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export"
+    "#### Excluding field #7"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9044/9963 (90.78%) raw dots matched to dw\n",
+      "9044/9618 (94.03%) dw dots matched to raw\n",
+      "574 (5.76% raw, 5.97% dw) dots matched with distance > 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "match_counts_a = np.array(match_counts)\n",
+    "n_total_matched = np.sum(match_counts_a[:6, 1])\n",
+    "n_total_over_dist = np.sum(match_counts_a[:6, 2])\n",
+    "n_total_raw = np.sum(match_counts_a[:6, 3])\n",
+    "n_total__dw = np.sum(match_counts_a[:6, 4])\n",
+    "print(f\"{n_total_matched}/{n_total_raw} ({n_total_matched/n_total_raw*100:.2f}%) raw dots matched to dw\")\n",
+    "print(f\"{n_total_matched}/{n_total__dw} ({n_total_matched/n_total__dw*100:.2f}%) dw dots matched to raw\")\n",
+    "print(f\"{n_total_over_dist} ({n_total_over_dist/n_total_raw*100:.2f}% raw, {n_total_over_dist/n_total__dw*100:.2f}% dw) dots matched with distance > {max_dist}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Excluding field #6-7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8174/8928 (91.55%) raw dots matched to dw\n",
+      "8174/8689 (94.07%) dw dots matched to raw\n",
+      "515 (5.77% raw, 5.93% dw) dots matched with distance > 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "match_counts_a = np.array(match_counts)\n",
+    "n_total_matched = np.sum(match_counts_a[:5, 1])\n",
+    "n_total_over_dist = np.sum(match_counts_a[:5, 2])\n",
+    "n_total_raw = np.sum(match_counts_a[:5, 3])\n",
+    "n_total__dw = np.sum(match_counts_a[:5, 4])\n",
+    "print(f\"{n_total_matched}/{n_total_raw} ({n_total_matched/n_total_raw*100:.2f}%) raw dots matched to dw\")\n",
+    "print(f\"{n_total_matched}/{n_total__dw} ({n_total_matched/n_total__dw*100:.2f}%) dw dots matched to raw\")\n",
+    "print(f\"{n_total_over_dist} ({n_total_over_dist/n_total_raw*100:.2f}% raw, {n_total_over_dist/n_total__dw*100:.2f}% dw) dots matched with distance > {max_dist}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
