--- a/notebooks/4_reference_dots_from_60x/1.0_reference_selection.global_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/1.0_reference_selection.global_thr.ipynb
@@ -102,21 +102,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3"
+      "Iteration #...1...2...3...4...5"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:00<00:04,  1.28it/s]"
+      " 14%|█▍        | 1/7 [00:01<00:11,  1.90s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...4...5...6\n",
+      "...6\n",
       "Iteration #...1...2...3...4...5...6...7...8...9"
      ]
     },
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:02<00:04,  1.05it/s]"
+      " 29%|██▊       | 2/7 [00:04<00:10,  2.18s/it]"
      ]
     },
     {
@@ -132,6 +132,36 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Iteration #...1...2...3...4...5"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|████▎     | 3/7 [00:06<00:08,  2.05s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...6...7...8\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 4/7 [00:09<00:06,  2.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...11\n",
       "Iteration #...1...2...3...4...5...6"
      ]
     },
@@ -139,72 +169,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:02<00:03,  1.14it/s]"
+      " 71%|███████▏  | 5/7 [00:13<00:05,  2.80s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...7...8\n",
-      "Iteration #...1...2...3...4...5...6...7...8"
+      "...7\n",
+      "Iteration #...1...2...3"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [00:03<00:02,  1.08it/s]"
+      " 86%|████████▌ | 6/7 [00:14<00:02,  2.43s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...9...10...11\n",
-      "Iteration #...1...2...3...4...5...6"
+      "...4\n",
+      "Iteration #...1"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:05<00:02,  1.13s/it]"
+      "100%|██████████| 7/7 [00:16<00:00,  2.40s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 86%|████████▌ | 6/7 [00:06<00:01,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration #...1...2...3...4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7/7 [00:06<00:00,  1.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration #...1...2...3...4...5...6\n"
+      "...2...3...4...5...6\n"
      ]
     },
     {
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,16 +340,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export"
+    "#### Excluding field #7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8917/9704 (91.89%) raw dots matched to dw\n",
+      "8917/9657 (92.34%) dw dots matched to raw\n",
+      "678 (6.99% raw, 7.02% dw) dots matched with distance > 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "match_counts_a = np.array(match_counts)\n",
+    "n_total_matched = np.sum(match_counts_a[:6, 1])\n",
+    "n_total_over_dist = np.sum(match_counts_a[:6, 2])\n",
+    "n_total_raw = np.sum(match_counts_a[:6, 3])\n",
+    "n_total__dw = np.sum(match_counts_a[:6, 4])\n",
+    "print(f\"{n_total_matched}/{n_total_raw} ({n_total_matched/n_total_raw*100:.2f}%) raw dots matched to dw\")\n",
+    "print(f\"{n_total_matched}/{n_total__dw} ({n_total_matched/n_total__dw*100:.2f}%) dw dots matched to raw\")\n",
+    "print(f\"{n_total_over_dist} ({n_total_over_dist/n_total_raw*100:.2f}% raw, {n_total_over_dist/n_total__dw*100:.2f}% dw) dots matched with distance > {max_dist}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Excluding field #6-7"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8226/8945 (91.96%) raw dots matched to dw\n",
+      "8226/8848 (92.97%) dw dots matched to raw\n",
+      "610 (6.82% raw, 6.89% dw) dots matched with distance > 3\n"
+     ]
+    }
+   ],
    "source": [
-    "matched_dots = pd.concat(match_output)"
+    "match_counts_a = np.array(match_counts)\n",
+    "n_total_matched = np.sum(match_counts_a[:5, 1])\n",
+    "n_total_over_dist = np.sum(match_counts_a[:5, 2])\n",
+    "n_total_raw = np.sum(match_counts_a[:5, 3])\n",
+    "n_total__dw = np.sum(match_counts_a[:5, 4])\n",
+    "print(f\"{n_total_matched}/{n_total_raw} ({n_total_matched/n_total_raw*100:.2f}%) raw dots matched to dw\")\n",
+    "print(f\"{n_total_matched}/{n_total__dw} ({n_total_matched/n_total__dw*100:.2f}%) dw dots matched to raw\")\n",
+    "print(f\"{n_total_over_dist} ({n_total_over_dist/n_total_raw*100:.2f}% raw, {n_total_over_dist/n_total__dw*100:.2f}% dw) dots matched with distance > {max_dist}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export"
    ]
   },
   {
@@ -356,12 +415,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matched_dots.to_csv(\"../../data/60x_reference/matched_dots.global_thr.tsv\", sep=\"\\t\", index=False)"
+    "matched_dots = pd.concat(match_output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_dots.to_csv(\"../../data/60x_reference/matched_dots.global_thr.tsv\", sep=\"\\t\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
