Fixed field # in stat printing

--- a/notebooks/4_reference_dots_from_60x/1.0_reference_selection.global_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/1.0_reference_selection.global_thr.ipynb
@@ -102,21 +102,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4...5"
+      "Iteration #...1...2...3...4"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:01<00:11,  1.90s/it]"
+      " 14%|█▍        | 1/7 [00:02<00:12,  2.02s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...6\n",
+      "...5...6\n",
+      "Iteration #...1...2...3...4...5...6...7...8"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|██▊       | 2/7 [00:05<00:12,  2.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...9\n",
+      "Iteration #...1...2...3...4...5...6...7"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|████▎     | 3/7 [00:07<00:09,  2.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...8\n",
       "Iteration #...1...2...3...4...5...6...7...8...9"
      ]
     },
@@ -124,7 +154,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:04<00:10,  2.18s/it]"
+      " 57%|█████▋    | 4/7 [00:10<00:07,  2.41s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...10...11\n",
+      "Iteration #...1...2...3...4...5...6...7"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████▏  | 5/7 [00:14<00:05,  2.94s/it]"
      ]
     },
     {
@@ -132,51 +177,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 3/7 [00:06<00:08,  2.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...6...7...8\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 57%|█████▋    | 4/7 [00:09<00:06,  2.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...11\n",
-      "Iteration #...1...2...3...4...5...6"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 71%|███████▏  | 5/7 [00:13<00:05,  2.80s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...7\n",
       "Iteration #...1...2...3"
      ]
     },
@@ -184,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:14<00:02,  2.43s/it]"
+      " 86%|████████▌ | 6/7 [00:15<00:02,  2.58s/it]"
      ]
     },
     {
@@ -192,21 +192,21 @@
      "output_type": "stream",
      "text": [
       "...4\n",
-      "Iteration #...1"
+      "Iteration #...1...2...3"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:16<00:00,  2.40s/it]"
+      "100%|██████████| 7/7 [00:17<00:00,  2.52s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...2...3...4...5...6\n"
+      "...4...5...6\n"
      ]
     },
     {
@@ -285,37 +285,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Field #0\n",
+      "Field #1\n",
       "    1308/1411 (92.70%) raw dots matched to dw\n",
       "    1308/1398 (93.56%) dw dots matched to raw\n",
       "    90 (6.38% raw, 6.44% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #1\n",
+      "Field #2\n",
       "    1921/2069 (92.85%) raw dots matched to dw\n",
       "    1921/2076 (92.53%) dw dots matched to raw\n",
       "    148 (7.15% raw, 7.13% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #2\n",
+      "Field #3\n",
       "    1045/1138 (91.83%) raw dots matched to dw\n",
       "    1045/1115 (93.72%) dw dots matched to raw\n",
       "    70 (6.15% raw, 6.28% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #3\n",
+      "Field #4\n",
       "    1548/1679 (92.20%) raw dots matched to dw\n",
       "    1548/1684 (91.92%) dw dots matched to raw\n",
       "    131 (7.80% raw, 7.78% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #4\n",
+      "Field #5\n",
       "    2404/2648 (90.79%) raw dots matched to dw\n",
       "    2404/2575 (93.36%) dw dots matched to raw\n",
       "    171 (6.46% raw, 6.64% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #5\n",
+      "Field #6\n",
       "    691/759 (91.04%) raw dots matched to dw\n",
       "    691/809 (85.41%) dw dots matched to raw\n",
       "    68 (8.96% raw, 8.41% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #6\n",
+      "Field #7\n",
       "    523/588 (88.95%) raw dots matched to dw\n",
       "    523/676 (77.37%) dw dots matched to raw\n",
       "    65 (11.05% raw, 9.62% dw) dots matched with distance > 3\n",
@@ -329,7 +329,7 @@
     "    n_over_dist = match_counts_a[series_id, 2]\n",
     "    n_raw = match_counts_a[series_id, 3]\n",
     "    n__dw = match_counts_a[series_id, 4]\n",
-    "    print(f\"\"\"Field #{series_id}\n",
+    "    print(f\"\"\"Field #{series_id+1}\n",
     "    {n_matched}/{n_raw} ({n_matched/n_raw*100:.2f}%) raw dots matched to dw\n",
     "    {n_matched}/{n__dw} ({n_matched/n__dw*100:.2f}%) dw dots matched to raw\n",
     "    {n_over_dist} ({n_over_dist/n_raw*100:.2f}% raw, {n_over_dist/n__dw*100:.2f}% dw) dots matched with distance > {max_dist}\n",
