--- a/notebooks/4_reference_dots_from_60x/1.1_reference_selection.field_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/1.1_reference_selection.field_thr.ipynb
@@ -109,21 +109,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4...5...6...7...8...9"
+      "Iteration #...1...2...3...4...5...6...7"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:02<00:17,  2.88s/it]"
+      " 14%|█▍        | 1/7 [00:02<00:13,  2.24s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "...8...9\n",
       "Iteration #...1...2...3...4...5...6...7...8...9...10...11"
      ]
     },
@@ -131,37 +131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:06<00:15,  3.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Iteration #...1...2...3...4"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 3/7 [00:07<00:10,  2.62s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...5...6\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 57%|█████▋    | 4/7 [00:10<00:07,  2.58s/it]"
+      " 29%|██▊       | 2/7 [00:05<00:12,  2.57s/it]"
      ]
     },
     {
@@ -176,7 +146,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:14<00:05,  2.95s/it]"
+      " 43%|████▎     | 3/7 [00:07<00:09,  2.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...6\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 4/7 [00:09<00:06,  2.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Iteration #...1...2...3...4...5"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████▏  | 5/7 [00:12<00:04,  2.46s/it]"
      ]
     },
     {
@@ -191,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:16<00:02,  2.74s/it]"
+      " 86%|████████▌ | 6/7 [00:13<00:02,  2.17s/it]"
      ]
     },
     {
@@ -199,21 +199,21 @@
      "output_type": "stream",
      "text": [
       "...2...3...4\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
+      "Iteration #...1...2...3...4...5...6...7...8...9...10"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:19<00:00,  2.75s/it]"
+      "100%|██████████| 7/7 [00:15<00:00,  2.27s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "...11...12\n"
      ]
     },
     {
@@ -296,37 +296,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Field #0\n",
+      "Field #1\n",
       "    1272/1366 (93.12%) raw dots matched to dw\n",
       "    1272/1363 (93.32%) dw dots matched to raw\n",
       "    91 (6.66% raw, 6.68% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #1\n",
+      "Field #2\n",
       "    1865/1998 (93.34%) raw dots matched to dw\n",
       "    1865/1992 (93.62%) dw dots matched to raw\n",
       "    127 (6.36% raw, 6.38% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #2\n",
+      "Field #3\n",
       "    1032/1138 (90.69%) raw dots matched to dw\n",
       "    1032/1078 (95.73%) dw dots matched to raw\n",
       "    46 (4.04% raw, 4.27% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #3\n",
+      "Field #4\n",
       "    1534/1679 (91.36%) raw dots matched to dw\n",
       "    1534/1642 (93.42%) dw dots matched to raw\n",
       "    108 (6.43% raw, 6.58% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #4\n",
+      "Field #5\n",
       "    2471/2747 (89.95%) raw dots matched to dw\n",
       "    2471/2614 (94.53%) dw dots matched to raw\n",
       "    143 (5.21% raw, 5.47% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #5\n",
+      "Field #6\n",
       "    870/1035 (84.06%) raw dots matched to dw\n",
       "    870/929 (93.65%) dw dots matched to raw\n",
       "    59 (5.70% raw, 6.35% dw) dots matched with distance > 3\n",
       "    \n",
-      "Field #6\n",
+      "Field #7\n",
       "    904/1103 (81.96%) raw dots matched to dw\n",
       "    904/1069 (84.57%) dw dots matched to raw\n",
       "    165 (14.96% raw, 15.43% dw) dots matched with distance > 3\n",
@@ -340,7 +340,7 @@
     "    n_over_dist = match_counts_a[series_id, 2]\n",
     "    n_raw = match_counts_a[series_id, 3]\n",
     "    n__dw = match_counts_a[series_id, 4]\n",
-    "    print(f\"\"\"Field #{series_id}\n",
+    "    print(f\"\"\"Field #{series_id+1}\n",
     "    {n_matched}/{n_raw} ({n_matched/n_raw*100:.2f}%) raw dots matched to dw\n",
     "    {n_matched}/{n__dw} ({n_matched/n__dw*100:.2f}%) dw dots matched to raw\n",
     "    {n_over_dist} ({n_over_dist/n_raw*100:.2f}% raw, {n_over_dist/n__dw*100:.2f}% dw) dots matched with distance > {max_dist}\n",
