--- a/notebooks/4_reference_dots_from_60x/0.0_60x.overlays.global_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/0.0_60x.overlays.global_thr.ipynb
@@ -91,14 +91,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 180/180 [00:38<00:00,  4.73it/s]\n"
+      "nucleus: 100%|██████████| 180/180 [00:18<00:00,  9.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
       "Field #2\n"
      ]
@@ -107,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/208 [00:00<?, ?it/s]"
+      "nucleus:   0%|          | 1/208 [00:00<00:23,  8.83it/s]"
      ]
     },
     {
@@ -123,14 +122,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 208/208 [00:41<00:00,  5.05it/s]\n"
+      "nucleus: 100%|██████████| 208/208 [00:24<00:00,  8.48it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
       "Field #3\n"
      ]
@@ -155,14 +153,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 156/156 [00:28<00:00,  5.40it/s]\n"
+      "nucleus: 100%|██████████| 156/156 [00:18<00:00,  8.44it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
       "Field #4\n"
      ]
@@ -187,14 +184,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 172/172 [00:31<00:00,  5.45it/s]\n"
+      "nucleus: 100%|██████████| 172/172 [00:22<00:00,  7.71it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
       "Field #5\n"
      ]
@@ -203,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/342 [00:00<?, ?it/s]"
+      "nucleus:   0%|          | 1/342 [00:00<00:41,  8.18it/s]"
      ]
     },
     {
@@ -219,14 +215,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 342/342 [00:59<00:00,  5.73it/s]\n"
+      "nucleus: 100%|██████████| 342/342 [00:43<00:00,  7.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
       "Field #6\n"
      ]
@@ -251,14 +246,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 210/210 [00:36<00:00,  5.70it/s]\n"
+      "nucleus: 100%|██████████| 210/210 [00:31<00:00,  6.66it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n",
       "Field #7\n"
      ]
@@ -283,14 +277,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 221/221 [00:41<00:00,  5.27it/s]\n"
+      "nucleus: 100%|██████████| 221/221 [00:36<00:00,  6.09it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Plotting overlapped points between raw and dw\n",
       " ! DONE\n"
      ]
     }
@@ -310,7 +303,7 @@
     "    selected_raw_dots = field_raw_dots.loc[field_raw_dots[\"Value2\"] >= raw_thr, :].reset_index(drop=True)\n",
     "    selected_dw__dots = field_dw__dots.loc[field_dw__dots[\"Value2\"] >= dw__thr, :].reset_index(drop=True)\n",
     "\n",
-    "    fig3, ax = plt.subplots(figsize=(30, 10), ncols=3, constrained_layout=True)\n",
+    "    fig3, ax = plt.subplots(figsize=(20, 10), ncols=2, constrained_layout=True)\n",
     "    fig3.suptitle(f\"Field #{current_field_id}\")\n",
     "    print(\" > Plotting raw\")\n",
     "    ax[0].set_title(f\"60x_raw (n.dots={selected_raw_dots.shape[0]})\")\n",
@@ -338,16 +331,6 @@
     "        for contour in contours:\n",
     "            ax[0].scatter(x=contour[:,1], y=contour[:,0], c=\"yellow\", s=.005)\n",
     "            ax[1].scatter(x=contour[:,1], y=contour[:,0], c=\"yellow\", s=.005)\n",
-    "    print(\" > Plotting overlapped points between raw and dw\")\n",
-    "    ax[2].set_title(\"Red: 60x_raw. Blue: 60x_dw.\")\n",
-    "    ax[2].plot(\n",
-    "        selected_raw_dots[\"y\"].values,\n",
-    "        selected_raw_dots[\"x\"].values,\n",
-    "        'r.', marker=\".\", markersize=2)\n",
-    "    ax[2].plot(\n",
-    "        selected_dw__dots[\"y\"].values,\n",
-    "        selected_dw__dots[\"x\"].values,\n",
-    "        'b.', marker=\".\", markersize=.8)\n",
     "    plt.close(fig3)\n",
     "    #print(\" > Exporting\")\n",
     "    fig3.savefig(f\"../../data/60x_reference/overlays.global_thr/overlay_{current_field_id:03d}.png\", bbox_inches='tight')\n",
