Fixed 20x global overlays.

--- a/notebooks/5_comparing_magnifications/0.0_20x.overlays.global_thr.ipynb
+++ b/notebooks/5_comparing_magnifications/0.0_20x.overlays.global_thr.ipynb
@@ -55,9 +55,7 @@
     "raw_image_folder_path = \"/mnt/data/Imaging/202105-Deconwolf/data_210726/20x_raw\"\n",
     "dw__image_folder_path = \"/mnt/data/Imaging/202105-Deconwolf/data_210726/20x_dw\"\n",
     "mask_folder_path = \"../../data/20x_mask/dilated_labels_watershed_from60x\"\n",
-    "field_list = np.unique(dots_data2[\"sid\"].values).tolist()\n",
-    "raw_thr = 0.15\n",
-    "dw__thr = 5.3"
+    "field_list = np.unique(dots_data2[\"sid\"].values).tolist()"
    ]
   },
   {
@@ -76,7 +74,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/180 [00:00<?, ?it/s]"
+      "nucleus:   4%|▍         | 7/180 [00:00<00:03, 56.04it/s]"
      ]
     },
     {
@@ -92,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 180/180 [00:11<00:00, 15.03it/s]\n"
+      "nucleus: 100%|██████████| 180/180 [00:05<00:00, 35.25it/s]\n"
      ]
     },
     {
@@ -107,7 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/208 [00:00<?, ?it/s]"
+      "nucleus:   2%|▏         | 5/208 [00:00<00:04, 42.10it/s]"
      ]
     },
     {
@@ -123,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 208/208 [00:20<00:00,  9.99it/s]\n"
+      "nucleus: 100%|██████████| 208/208 [00:11<00:00, 17.68it/s]\n"
      ]
     },
     {
@@ -138,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/156 [00:00<?, ?it/s]"
+      "nucleus:   4%|▍         | 7/156 [00:00<00:02, 58.56it/s]"
      ]
     },
     {
@@ -154,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 156/156 [00:09<00:00, 16.02it/s]\n"
+      "nucleus: 100%|██████████| 156/156 [00:06<00:00, 24.76it/s]\n"
      ]
     },
     {
@@ -169,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/172 [00:00<?, ?it/s]"
+      "nucleus:   2%|▏         | 4/172 [00:00<00:04, 37.36it/s]"
      ]
     },
     {
@@ -185,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 172/172 [00:12<00:00, 13.34it/s]\n"
+      "nucleus: 100%|██████████| 172/172 [00:05<00:00, 28.94it/s]\n"
      ]
     },
     {
@@ -200,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   1%|          | 4/342 [00:00<00:09, 34.37it/s]"
+      "nucleus:   2%|▏         | 7/342 [00:00<00:04, 67.06it/s]"
      ]
     },
     {
@@ -216,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 342/342 [00:18<00:00, 18.81it/s]\n"
+      "nucleus: 100%|██████████| 342/342 [00:10<00:00, 31.30it/s] \n"
      ]
     },
     {
@@ -231,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/210 [00:00<?, ?it/s]"
+      "nucleus:   2%|▏         | 5/210 [00:00<00:04, 49.67it/s]"
      ]
     },
     {
@@ -247,7 +245,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 210/210 [00:15<00:00, 13.21it/s]\n"
+      "nucleus: 100%|██████████| 210/210 [00:06<00:00, 31.17it/s]\n"
      ]
     },
     {
@@ -262,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   0%|          | 0/221 [00:00<?, ?it/s]"
+      "nucleus:   2%|▏         | 5/221 [00:00<00:04, 46.81it/s]"
      ]
     },
     {
@@ -278,7 +276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 221/221 [00:17<00:00, 12.92it/s]\n"
+      "nucleus: 100%|██████████| 221/221 [00:08<00:00, 27.08it/s]\n"
      ]
     },
     {
