--- a/notebooks/5_comparing_magnifications/0.1_20x.overlays.field_thr.ipynb
+++ b/notebooks/5_comparing_magnifications/0.1_20x.overlays.field_thr.ipynb
@@ -54,9 +54,7 @@
     "raw_image_folder_path = \"/mnt/data/Imaging/202105-Deconwolf/data_210726/20x_raw\"\n",
     "dw__image_folder_path = \"/mnt/data/Imaging/202105-Deconwolf/data_210726/20x_dw\"\n",
     "mask_folder_path = \"../../data/20x_mask/dilated_labels_watershed_from60x\"\n",
-    "field_list = np.unique(dots_data2[\"sid\"].values).tolist()\n",
-    "raw_thr = 0.15\n",
-    "dw__thr = 5.3"
+    "field_list = np.unique(dots_data2[\"sid\"].values).tolist()"
    ]
   },
   {
