--- a/notebooks/5_comparing_magnifications/3.0_20x_raw.export_matching.global_thr.ipynb
+++ b/notebooks/5_comparing_magnifications/3.0_20x_raw.export_matching.global_thr.ipynb
@@ -109,13 +109,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:04<00:00,  1.65it/s]\n"
+      "100%|██████████| 7/7 [00:04<00:00,  1.61it/s]\n"
      ]
     }
    ],
    "source": [
     "selected_20x_dots: List[pd.DataFrame] = []\n",
-    "selected_20x_dots_shifted: List[pd.DataFrame] = []\n",
     "for current_field_id in tqdm(np.unique(dots_data[\"sid\"])):\n",
     "    dot_max_z_proj = tifffile.imread(os.path.join(dot_image_folder_path, f\"a647_{current_field_id:03d}.tif\")).max(0)\n",
     "    ref_max_z_proj = tifffile.imread(os.path.join(ref_image_folder_path, f\"a647_{current_field_id:03d}.tif\")).max(0)\n",
@@ -138,8 +137,7 @@
     "    matched_60x_dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"id_60x\"].values\n",
     "    max_match_dist = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"eudist\"].max()\n",
     "\n",
-    "    selected_20x_dots.append(dot_coords.loc[matched_20x_dots, :])\n",
-    "    selected_20x_dots_shifted.append(dot_coords2.loc[matched_20x_dots, :])"
+    "    selected_20x_dots.append(dots.loc[matched_20x_dots, :])"
    ]
   },
   {
@@ -151,18 +149,6 @@
     "pd.concat(selected_20x_dots).reset_index(\n",
     "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
     "                                   f\"{selected_magnification}_{selected_image_type}.global_thr.tsv\"),\n",
-    "                      sep=\"\\t\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.concat(selected_20x_dots_shifted).reset_index(\n",
-    "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
-    "                                   f\"{selected_magnification}_{selected_image_type}.global_thr.shifted.tsv\"),\n",
     "                      sep=\"\\t\", index=False)"
    ]
   }
