--- a/notebooks/5_comparing_magnifications/3.1_20x_raw.export_matching.field_thr.ipynb
+++ b/notebooks/5_comparing_magnifications/3.1_20x_raw.export_matching.field_thr.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "selected_magnification = \"20x\"\n",
-    "selected_image_type = \"dw\"\n",
+    "selected_image_type = \"raw\"\n",
     "max_dist = 9\n",
     "aspect = np.array((1/3, 1/3))    # XY: 20x / aspect => 60x"
    ]
@@ -110,20 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:04<00:00,  1.66it/s]\n"
+      "100%|██████████| 7/7 [00:04<00:00,  1.61it/s]\n"
      ]
     }
    ],
    "source": [
     "selected_20x_dots: List[pd.DataFrame] = []\n",
-    "selected_20x_dots_shifted: List[pd.DataFrame] = []\n",
     "for current_field_id in tqdm(np.unique(dots_data[\"sid\"])):\n",
     "    thresholds = thresholds_table.loc[current_field_id == thresholds_table[\"sid\"], :]\n",
     "    intensity_thr = thresholds.loc[selected_image_type == thresholds[\"image_type\"], \"thr\"].values[0]\n",
@@ -149,31 +148,18 @@
     "    matched_60x_dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"id_60x\"].values\n",
     "    max_match_dist = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"eudist\"].max()\n",
     "\n",
-    "    selected_20x_dots.append(dot_coords.loc[matched_20x_dots, :])\n",
-    "    selected_20x_dots_shifted.append(dot_coords2.loc[matched_20x_dots, :])"
+    "    selected_20x_dots.append(dots.loc[matched_20x_dots, :])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.concat(selected_20x_dots).reset_index(\n",
     "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
     "                                   f\"{selected_magnification}_{selected_image_type}.field_thr.tsv\"),\n",
-    "                      sep=\"\\t\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.concat(selected_20x_dots_shifted).reset_index(\n",
-    "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
-    "                                   f\"{selected_magnification}_{selected_image_type}.field_thr.shifted.tsv\"),\n",
     "                      sep=\"\\t\", index=False)"
    ]
   }
